# ChangeLog for x11-drivers/psb-kmod
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/psb-kmod/ChangeLog,v 1.1 2009/09/13 20:10:43 patrick Exp $

*psb-kmod-4.41.1_p8 (13 Sep 2009)

  13 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +psb-kmod-4.41.1_p8.ebuild, +metadata.xml:
  Initial import of the intel poulsbo graphics driver and support libs.
  Fixes #274184. Thanks to Konrad Campowsky for the ebuilds and all the
  people who tested them.
