@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST psb-kmod-4.41.1-10.fc11.src.rpm 402140 RMD160 36e4ea047c238b91597de3802d31bc1e0d774e8d SHA1 de7e43764a81aca5ee1b911b39414802412bb05c SHA256 9703b232a25e2c1de76746c4ebeb2228b6329669d4e3cf5dab220012c0766c71
 DIST psb-kmod-4.41.1-8.fc11.src.rpm 397851 RMD160 0991d48512596f0361f7dcb861f87869446e3cc4 SHA1 a525cb10fecd5aa003fb027605c5d4b8d622222d SHA256 2dc666531b9cfa8fb118b8be8d0cd4f625d4bb7c7caecdb7656db6d03ede0291
+EBUILD psb-kmod-4.41.1_p10.ebuild 2742 RMD160 2f70fc460af5a35d675dcc47e439e6fc93f6330f SHA1 189437b81c966aeae8bde924f968e198c5c3e5d0 SHA256 ebe1a56f2f43470e9acd1bb0871bd250ad192190f26ec5192cb21bcd5ba6de09
 EBUILD psb-kmod-4.41.1_p8.ebuild 2451 RMD160 49c91203d54e73cbf0384e895dcde83221374e25 SHA1 466240be50fb52467c88fe07e4363989a59f8bbd SHA256 3ac3aa526b62c3e71c169ae2425ad2f8c04a09df7b0d84d60d39fdd76f492317
-MISC ChangeLog 515 RMD160 b77dc6d7a45c71b9dbab8ddaaf9854278530fa1b SHA1 f404d6d6f056f2f7fa5791e6cb4bb5e14f5bf6fa SHA256 5932ca11b7552d3bc3378e3c2b6a780b6c08bfa6598c729b8711c347295b7011
+MISC ChangeLog 694 RMD160 161b5a7eb105cdb9376085fbe723688bb2cd5067 SHA1 1904812271bad48bd29272443e2bef3fb3f22de1 SHA256 e1d977f0d4028b82200e3f901f34ada3cc1152380bb472e7e2fa6320eb04c552
 MISC metadata.xml 255 RMD160 dbe77cd804a4411e8445c05f6e632fdc2f72d082 SHA1 94e7a8d2d43907279488b984c3dcd9fd1888ce25 SHA256 28c7b0445a5f2eb0d524ff3afcef712ecbf345592d26142f71a3ef9bca653d4b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkrDCs0ACgkQ/ejvha5XGaMuFgCfYiNk3F9GRVWTnTyln1QZfDYd
+WrIAoO87Tec9Zg8cSS7OZqz7lvy4VTGx
+=rXGa
+-----END PGP SIGNATURE-----
