@@ -1,6 +1,11 @@
 # ChangeLog for x11-drivers/psb-kmod
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/psb-kmod/ChangeLog,v 1.1 2009/09/13 20:10:43 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/psb-kmod/ChangeLog,v 1.2 2009/09/30 07:37:38 zmedico Exp $
+
+*psb-kmod-4.41.1_p10 (30 Sep 2009)
+
+  30 Sep 2009; Zac Medico <zmedico@gentoo.org> +psb-kmod-4.41.1_p10.ebuild:
+  Bug #286753 - Version bump for compatibility with linux 2.6.31.
 
 *psb-kmod-4.41.1_p8 (13 Sep 2009)
 
